# Feeding-Robot-ARIMA-FFNN

./: .gitignore  LICENSE  README.ml  deploymentNotes.md  jetson_setup.sh  prd.md  requirements.txt  run_feeding.sh
.claude/: settings.local.json
feeding_robot/: CMakeLists.txt  package.xml
feeding_robot/description/: feeding_robot_core.xacro  gazebo_plugins.xacro  inertial_macros.xacro
feeding_robot/launch/: gazebo.launch.py
feeding_robot/meshes/: convert_step_to_stl.py  group_meshes_per_link.py
feeding_robot/meshes/collision/: shoulder_link.stl  solid_001.stl  solid_002.stl  solid_005.stl  solid_011.stl  solid_014.stl  solid_017.stl  solid_027.stl  solid_029.stl  solid_035.stl  solid_042.stl  solid_043.stl  solid_045.stl  solid_046.stl  solid_049.stl  solid_057.stl  solid_058.stl  solid_059.stl
feeding_robot/meshes/visual/: feeder_link.stl  forceSensor.stl  lower_arm_link.stl  shoulder_link.stl  solid_010.stl  solid_016.stl  solid_026.stl  solid_028.stl  solid_032.stl  solid_034.stl  solid_037.stl  solid_040.stl  solid_044.stl  solid_050.stl  solid_051.stl  solid_055.stl  solid_060.stl  solid_061.stl  solid_062.stl  solid_064.stl  sonar.stl
feeding_robot/worlds/: feeding_table.sdf
ros2_feedbot_ws/src/feedbot_description/: CMakeLists.txt  package.xml  setup.py
ros2_feedbot_ws/src/feedbot_description/config/: controllers.yaml  controllers_tuned.yaml  controllers_untuned.yaml  gazebo_controllers.yaml  ros2_control.yaml
ros2_feedbot_ws/src/feedbot_description/feedbot_description/: step_test_joint.py
ros2_feedbot_ws/src/feedbot_description/launch/: bringup.launch.py  control_rviz.launch.py  gazebo.launch.py
ros2_feedbot_ws/src/feedbot_description/meshes/: base.stl  link2.stl  link3.stl  plate.stl  table.stl
ros2_feedbot_ws/src/feedbot_description/rviz/: control.rviz  feeding_system.rviz
ros2_feedbot_ws/src/feedbot_description/scripts/: step_test_joint.py  step_test_joint1.py
(+184 files in other folders)
